// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startServer page /archive/2019-03/page-1.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Archive March 2019 - Page 1 - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/archive/2019-03/page-1.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Archive March 2019</h1>
    <section>
      <h2>
        <a href=\\"/post5.html\\">Post 5</a>
      </h2>
      <div class=\\"post-date\\">3 March 2019</div>
      <p>
  Content 5
</p>
      <a href=\\"/post5.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post4.html\\">Post 4</a>
      </h2>
      <div class=\\"post-date\\">2 March 2019</div>
      <p>
  Content 4
</p>
      <a href=\\"/post4.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post3.html\\">Post 3</a>
      </h2>
      <div class=\\"post-date\\">1 March 2019</div>
      <p>
  Content 3
</p>
      <a href=\\"/post3.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;

exports[`startServer page /posts/page-2.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Posts - Page 2 - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/posts/page-2.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Posts</h1>
    <section>
      <h2>
        <a href=\\"/post2.html\\">Post 2</a>
      </h2>
      <div class=\\"post-date\\">2 January 2019</div>
      <p>
  Content 2
</p>
      <a href=\\"/post2.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post1.html\\">Post 1</a>
      </h2>
      <div class=\\"post-date\\">1 January 2019</div>
      <p>
  Content 1
</p>
      <a href=\\"/post1.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
      <a href=\\"/\\">&#8592; Previous Page</a>
    </div>
    <div class=\\"page-number\\">Page 2</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;

exports[`startServer page /tags/number/page-1.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Tag number - Page 1 - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/tags/number/page-1.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Tag number</h1>
    <section>
      <h2>
        <a href=\\"/post5.html\\">Post 5</a>
      </h2>
      <div class=\\"post-date\\">3 March 2019</div>
      <p>
  Content 5
</p>
      <a href=\\"/post5.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post4.html\\">Post 4</a>
      </h2>
      <div class=\\"post-date\\">2 March 2019</div>
      <p>
  Content 4
</p>
      <a href=\\"/post4.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post3.html\\">Post 3</a>
      </h2>
      <div class=\\"post-date\\">1 March 2019</div>
      <p>
  Content 3
</p>
      <a href=\\"/post3.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post2.html\\">Post 2</a>
      </h2>
      <div class=\\"post-date\\">2 January 2019</div>
      <p>
  Content 2
</p>
      <a href=\\"/post2.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post1.html\\">Post 1</a>
      </h2>
      <div class=\\"post-date\\">1 January 2019</div>
      <p>
  Content 1
</p>
      <a href=\\"/post1.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;

exports[`startServer page about 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Koala - Static Website Generator</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/about.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>

  <section>
    <h1>
      <a href=\\"/about.html\\">About</a>
    </h1>
    <p>
  The project aims to create simple to use, scalable and fast static website generator.
</p>
<p>
  More info at <a href=\\"https://github.com/KoalaSpace/koala-webgen\\">GitHub</a>
</p>
  </section>


</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;

exports[`startServer post hello-world 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Koala - Static Website Generator</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/hello-world.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>


  <section>
    <h1>
      <a href=\\"/hello-world.html\\">Hello World</a>
    </h1>
    <div class=\\"post-date\\">20 June 2020</div>
    <div class=\\"post-tags\\">
      <div class=\\"post-tags-name\\">Tags: </div>
      <ul>
        <li>
          <a href=\\"/tags/hello/page-1.html\\">hello</a>
        </li>
        <li>
          <a href=\\"/tags/intro/page-1.html\\">intro</a>
        </li>
      </ul>
    </div>
    <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan. Aenean eu
  lacus quam. Morbi consequat ante quis eros iaculis tempus. Orci varius natoque penatibus et magnis dis parturient
  montes, nascetur ridiculus mus. Nulla sit amet urna vitae elit iaculis blandit. Mauris dignissim consectetur augue vel
  varius.
</p>
<p>
  Aenean facilisis sit amet neque a ultricies. Sed consectetur lorem quis lobortis tincidunt. Interdum et malesuada
  fames ac ante ipsum primis in faucibus. Nullam at elit pulvinar, porta lorem sed, facilisis orci. Proin lacinia nisl
  at placerat ornare. Donec ultrices dui ac varius luctus. Mauris sagittis ornare arcu, a dictum ante aliquet id.
</p>
<p>
  Aliquam bibendum molestie malesuada. Duis dignissim lorem id justo ultricies blandit. Aenean in ex aliquet, feugiat
  nisl vitae, viverra sapien. Nullam vel ex a velit auctor ultricies vulputate ac libero. Integer nec malesuada lectus,
  sit amet maximus ante. Morbi rhoncus hendrerit purus porta sagittis. Etiam in libero auctor, porttitor tellus non,
  tristique diam. Cras cursus felis ac dui imperdiet gravida.
</p>
<p>
  Aliquam non erat tellus. Sed non diam quis velit venenatis lacinia eget a ligula. Sed rhoncus vitae quam in rhoncus.
  Quisque congue pretium porttitor. Phasellus auctor felis nisl, quis vestibulum turpis commodo et. Maecenas non
  scelerisque felis. Nullam vitae venenatis nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
  posuere cubilia curae; Donec faucibus tincidunt risus nec auctor. Aliquam fermentum ante at urna laoreet, sed cursus
  ligula porttitor. Nunc eget ultricies nisi. Vestibulum ligula quam, viverra at scelerisque ultrices, lacinia quis
  augue. Sed et lacus nec diam cursus pretium feugiat at odio. Vestibulum sit amet ipsum sed libero pellentesque
  tincidunt eu et nisl.
</p>
<p>
  Sed vitae metus tincidunt, porttitor dui a, tristique arcu. Donec sit amet nisl et diam egestas vulputate. Aenean vel
  ullamcorper ex. Aliquam erat volutpat. Suspendisse vel urna tincidunt, eleifend quam ut, egestas purus. Donec
  sollicitudin tempus lacus. Duis pharetra lacus magna, ac scelerisque risus convallis in. In gravida placerat elit, ut
  laoreet neque convallis eget. Nam sollicitudin convallis ipsum, sit amet hendrerit risus iaculis molestie. Aliquam
  dapibus nibh sit amet iaculis venenatis. Nullam vehicula volutpat eleifend. Suspendisse dolor purus, consectetur
  mollis tellus vel, pulvinar consectetur diam. Vivamus quis nisi quis nunc cursus tempus vel in est.
</p>
  </section>

</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;

exports[`startServer root 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Koala - Static Website Generator</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/\\">
          <img src=\\"/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>
  <nav>
    <ul>
      <li><a href=\\"/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Posts</h1>
    <section>
      <h2>
        <a href=\\"/hello-world.html\\">Hello World</a>
      </h2>
      <div class=\\"post-date\\">20 June 2020</div>
      <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan. Aenean eu
  lacus quam. Morbi consequat ante quis eros iaculis tempus. Orci varius natoque penatibus et magnis dis parturient
  montes, nascetur ridiculus mus. Nulla sit amet urna vitae elit iaculis blandit. Mauris dignissim consectetur augue vel
  varius.
</p>

      <a href=\\"/hello-world.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/test/test.html\\">Test</a>
      </h2>
      <div class=\\"post-date\\">10 June 2020</div>
      <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan.
</p>

      <a href=\\"/test/test.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post5.html\\">Post 5</a>
      </h2>
      <div class=\\"post-date\\">3 March 2019</div>
      <p>
  Content 5
</p>
      <a href=\\"/post5.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post4.html\\">Post 4</a>
      </h2>
      <div class=\\"post-date\\">2 March 2019</div>
      <p>
  Content 4
</p>
      <a href=\\"/post4.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/post3.html\\">Post 3</a>
      </h2>
      <div class=\\"post-date\\">1 March 2019</div>
      <p>
  Content 3
</p>
      <a href=\\"/post3.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
      <a href=\\"/posts/page-2.html\\">Next Page &#8594;</a>
    </div>
  </nav>



</main>

  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>


  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/\\">https://www.koalaspace.com/</a>
</footer>
</body>

</html>"
`;
